--- a/indexcopy.html
+++ b/indexcopy.html
@@ -73,6 +73,7 @@
 
 <!-- Informacion -->
 <Section id="acerca-de-mi">
+  <h1>Sergio Romero Representaciones</h1>
   <h2 class="texto-titulo">Acerca de mi</h2>
 <div class="img-text-container">
     <img src="imagenes/foto-para-papa-2.png" 
