--- a/indexcopy.html
+++ b/indexcopy.html
@@ -23,7 +23,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
      crossorigin="anonymous">
-    <title>SR REPRESENTACIONES</title>
+    
+    <!-- meta tag -->
+    <meta name="description" content="Sergio romero representante comercial de roubaix,excite,dispita, en las provincias de salta,jujuy, tucuman y santiago del estero">
+    <!-- kw -->
+    <meta name="keywords" content="perfumeria,cosmetica,cosmeticos,capilares,puericultura,limpieza,peluqueria,perfuminas,alcohol,tinturas,baños de crema,cremas de peinado,ceras capilares,ceras,maquillajes,esmaltes,peines,cepillos,guantes descartables,accesorios de peluqueria,aseo personal,cremas corporales,cremas para manos">
+<!-- open graph -->
+<meta property="og:title" content="Sergio Romero Representaciones">
+<meta property="og:description" content="Sergio romero representante comercial de roubaix,excite,dispita, en las provincias de salta,jujuy, tucuman y santiago del estero">
+<meta property="og:image" content="">
+     <!-- favicon -->
+    <link rel="shortcut icon" href="sr-rep.ico" type="image/x-icon">
+     <title>Sergio Romero Representaciones</title>
 </head>
 <body>
    <!-- Header logo -->
@@ -73,7 +84,7 @@
 
 <!-- Informacion -->
 <Section id="acerca-de-mi">
-  <h1>Sergio Romero Representaciones</h1>
+  <h1>Representante Comercial</h1>
   <h2 class="texto-titulo">Acerca de mi</h2>
 <div class="img-text-container">
     <img src="imagenes/foto-para-papa-2.png" 
@@ -100,21 +111,21 @@ quis fugiat maiores. Repellat totam quam perspiciatis a ducimus ab. Quas quam ea
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="imagenes/roubaix-pc-web.png" class="d-block w-100" alt="...">
+          <img src="imagenes/roubaix-pc-web.png" class="d-block w-100" alt="Logo roubaix">
           <div class="carousel-caption d-none d-md-block">
             <h5>Roubaix</h5>
             <p>Some representative placeholder content for the first slide.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="imagenes/excite-pc.png" class="d-block w-100" alt="...">
+          <img src="imagenes/excite-pc.png" class="d-block w-100" alt="Logo excite">
           <div class="carousel-caption d-none d-md-block">
             <h5>Excite</h5>
             <p>Some representative placeholder content for the second slide.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="imagenes/dispita-pc.png" class="d-block w-100" alt="...">
+          <img src="imagenes/dispita-pc.png" class="d-block w-100" alt="logo dispita">
           <div class="carousel-caption d-none d-md-block">
             <h5>Dispita</h5>
             <p>Some representative placeholder content for the third slide.</p>
@@ -132,55 +143,6 @@ quis fugiat maiores. Repellat totam quam perspiciatis a ducimus ab. Quas quam ea
     </div>
 </section>
   
-  <!-- <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="imagenes/empresa1.png" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="imagenes/empresa2.png" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="imagenes/empresa3.png" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-</section> -->
-<!-- <section id="representaciones"> Aca va a haber un carousel de las diferentes empresas
-    <h2 class="titulo-black">Representaciones</h2>
-<div class="flex-container">
-    <div>lorem..</div>
-
-    <div>lorem</div>
-
-    <div> lorem..</div>
-</div> 
-</section> -->
 
 <!-- Fin representaciones -->
 
