cambio de imagen sergio romero

--- a/indexcopy.html
+++ b/indexcopy.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&family=Roboto:ital,wght@1,300;1,400;1,900&display=swap');
+    </style>
+ 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
         </style>
@@ -59,6 +63,7 @@
             <li class="nav-item">
               <a class="nav-link" href="#representaciones">Representaciones</a>
             </li>
+
             <li class="nav-item">
               <a class="nav-link" href="#zona-comercial">Zona Comercial</a>
             </li>
@@ -68,15 +73,18 @@
               </ul>
             </li>
           </ul>
-          <form>
-            <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-          </form>
         </div>
       </div>
     </nav>
 
 <!-- Descripcion y Objetivo -->
-
+<!-- Descripcion y Objetivo -->
+<!-- <section class="descripcion-corta">
+  <h1 class="titulo">Sergio Romero Representaciones</h1>
+  <p class="parrafo-descriptivo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam consectetur et similique adipisci nesciunt neque autem doloribus, 
+      cum quibusdam laboriosam quod maxime, veritatis quis. Enim temporibus molestias minus ipsa aliquam!</p>
+  </section> -->
+  <!-- Fin Descripcion y objetivo -->
 
 
 <!-- Fin Descripcion y objetivo -->
@@ -84,10 +92,10 @@
 
 <!-- Informacion -->
 <Section id="acerca-de-mi">
-  <h1>Representante Comercial</h1>
-  <h2 class="texto-titulo">Acerca de mi</h2>
+  <div class="text-container">
+  <h2 class="texto-titulo">Acerca de mi</h2> </div>
 <div class="img-text-container">
-    <img src="imagenes/foto-para-papa-2.png" 
+    <img src="imagenes/sergio-romero-foto.png" 
 alt="Imagen de Sergio Romero" class="imagen-papa ">
 <p class="texto-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
     Dolores eaque praesentium esse sunt facere sapiente exercitationem 
@@ -142,7 +150,7 @@ quis fugiat maiores. Repellat totam quam perspiciatis a ducimus ab. Quas quam ea
       </button>
     </div>
 </section>
-  
+
 
 <!-- Fin representaciones -->
 
