Escribiendo las descripciones

--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
 <div class="img-text-container">
     <img src="imagenes/sergio-romero-foto.png" 
 alt="Imagen de Sergio Romero" class="imagen-papa ">
-<p class="texto-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Dolores eaque praesentium esse sunt facere sapiente exercitationem 
-quis fugiat maiores. Repellat totam quam perspiciatis a ducimus ab. Quas quam earum ipsam.</p>
+<p class="texto-descripcion">Sergio Alejandro Romero representante comercial de empresas relacionadas a la cosmetica capilar ,
+  perfumeria y puericultura. Su zona de desarrollo comercial son en las provincias del NOA de la Republica Argentina
+  compuestas por Salta , Jujuy , Tucuman ,Santiago del Estero y sus zonas de influencia . Amplio conocimiento de la zona comercial desde el año
+  1992 a la fecha desarrollando clientes en los rubros mencionados.
+  </p>
 </div>
 </Section>
 <!-- Fin Informacion -->
@@ -183,14 +185,13 @@ quis fugiat maiores. Repellat totam quam perspiciatis a ducimus ab. Quas quam ea
 <section id="logistica"> <h2 class="negro">Logistica</h2>
 <div class="parrafo-descriptivo-dos">
   <div data-aos="zoom-in">
-  <div><img src="imagenes/truck.svg" alt="logo camion"width="50" height="50"><p>Lorem ipsum, dolor sit amet consectetur 
-adipisicing elit. Repudiandae dignissimos dolorem nostrum non quo iste molestias amet ratione ab, 
-numquam consequuntur earum quam suscipit, cupiditate recusandae cum blanditiis modi sequi.</p></div>
+  <div><img src="imagenes/truck.svg" alt="logo camion"width="50" height="50"><p>
+    Las empresas representadas practican sus envios a traves de transportes que el cliente elige ya que el costo del mismo 
+    es por su cuenta.La empresa traslada la mercaderia hasta los transportes indicados por el comprador.</p></div>
 </div>
 <div data-aos="zoom-in">
-<div><img src="imagenes/cash-coin.svg" alt="logo dinero"width="50" height="50">Lorem ipsum dolor sit amet, consectetur 
-adipisicing elit. Error commodi atque quae incidunt utullam veniam dolorem ab quia earum accusantium consequatur distinctio voluptatem 
-in exercitationem, non deserunt fugiat est?</div>
+<div><img src="imagenes/cash-coin.svg" alt="logo dinero"width="50" height="50">Las compras de la mercaderia se efectuaran atraves de depositos bancarios o transferencias como tambien es posible con valores 
+  a 30 dias de la fecha de factura </div>
 </div>
 </div>
 
@@ -200,7 +201,9 @@ in exercitationem, non deserunt fugiat est?</div>
 
 <section id="contacto"><!--Acá ira un formulario y una opcion de mandar mensaje-->
 <h2 class="negro">Contacto</h2>
-
+<p>
+  Para ponerse en contacto puede enviar un correo electronico a esta direccion sergioaromero057@hotmail.com
+  o completar el formulario</p>
 
 <div class="mb-3">
   <label for="exampleFormControlInput1" class="form-label">Nombre y Apellido</label>
@@ -220,7 +223,7 @@ in exercitationem, non deserunt fugiat est?</div>
 </div>
 </section>
 <!-- Whatsapp mensaje -->
-<div class="item-fixed"><img src="imagenes/whatsapp-logo-11.png" width="50px" height="50px" alt="whatsapp logo png" ></div>
+<div class="item-fixed"><a href="https://wa.me/05493874182173"><img src="imagenes/whatsapp-logo-11.png" width="50px" height="50px" alt="whatsapp logo png"></a></div>
 
 
 <!-- Footer con informacion de redes sociales -->
@@ -232,10 +235,10 @@ in exercitationem, non deserunt fugiat est?</div>
 
     <ul class="nav col-md-4 justify-content-end ">
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mail</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Intagram</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Facebook</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Linkedin</a></li>
+      <li class="nav-item"><a href="https://wa.me/05493874182173" class="nav-link px-2 text-muted">Whatsapp</a></li>
+      <!-- <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Intagram</a></li> -->
+      <!-- <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Facebook</a></li> -->
+      <!-- <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Linkedin</a></li> -->
     </ul>
   </footer>
 </div>
